Small code review

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,27 +10,36 @@
     <link rel="stylesheet" href="css/mobile.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="wrapper">
         <header class="header">
-                <div class="container">
-                    <nav class="header__menu">
-                        <img src="images/Logo.png" alt="logo" class="menu__logo">
-                        <ul class="menu__links">
-                            <li class="link"><a href="#">work</a></li>
-                            <li class="link"><a href="#">about me</a></li>
-                            <li class="link"><a href="#">news</a></li>
-                            <li class="link"><a href="#">contact</a></li>
-                        </ul>
-                    </nav>
-                    <img src="images/header__title.png" alt="Slice of my life" class="header__title">
-                    <div class="mouse">
-                        <img src="images/Mouse.png" alt="mouse" class="mouse__img">
-                        <h3 class="mouse__text">
-                            Schroll to see more
-                        </h3>
-                    </div>
+            <div class="container">
+                <nav class="header__menu">
+                    <img src="images/Logo.png" alt="logo" class="menu__logo">
+                    <ul class="menu__links">
+                        <li class="link">
+                            <a href="#">work</a>
+                        </li>
+                        <li class="link">
+                            <a href="#">about me</a>
+                        </li>
+                        <li class="link">
+                            <a href="#">news</a>
+                        </li>
+                        <li class="link">
+                            <a href="#">contact</a>
+                        </li>
+                    </ul>
+                </nav>
+                <img src="images/header__title.png" alt="Slice of my life" class="header__title">
+                <div class="scroll">
+                    <img src="images/Mouse.png" alt="mouse" class="scroll__img">
+                    <h3 class="scroll__text">
+                        Schroll to see more
+                    </h3>
                 </div>
+            </div>
         </header>
         <div class="main">
             <div class="about">
@@ -39,37 +49,39 @@
                             Hello I am <span>John</span>
                         </h1>
                         <p class="text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla egestas erat vel odio consequat,
-                            eu consectetur ligula lacinia. Quisque sodales a urna id iaculis. Cras facilisis lorem posuere,
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla egestas erat vel odio
+                            consequat,
+                            eu consectetur ligula lacinia. Quisque sodales a urna id iaculis. Cras facilisis lorem
+                            posuere,
                             consectetur massa et, egestas enim.
                         </p>
                         <a href="" class="text__link">
                             CONTACT WITH ME
                         </a>
-                    </div>    
+                    </div>
                 </div>
-                    <div class="about__img second">
-                        <img src="images/Photo1.png" alt="">
-                    </div>
-                    <div class="about__img">
+                <div class="about__img">
+                    <img src="images/Photo1.png" alt="">
+                </div>
+                <div class="about__img second__img">
                     <img src="images/Photo2.png" alt="">
-                    </div>
-                    <div class="about__img long__img">
-                        <img src="images/Photo3.png" alt="">
-                    </div>
-                    <div class="about__photo">
-                        <img src="images/Photo.png" alt="" class="photo">
-                    </div>
-                    <div class="about__text-photo">
-                        <h2 class="text__title">
-                            Lorem ipsum dolor sit amet
-                        </h2>
-                        <p class="text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla egestas erat vel odio consequat,
-                            eu consectetur ligula lacinia.
-                        </p>
-                        <a href="#" class="text__link">VIEW CASE STUDY</a>
-                    </div>
+                </div>
+                <div class="about__img long__img">
+                    <img src="images/Photo3.png" alt="">
+                </div>
+                <div class="about__photograph">
+                    <img src="images/Photo.png" alt="" class="photo">
+                </div>
+                <div class="about__photograph-text">
+                    <h2 class="text__title">
+                        Lorem ipsum dolor sit amet
+                    </h2>
+                    <p class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla egestas erat vel odio consequat,
+                        eu consectetur ligula lacinia.
+                    </p>
+                    <a href="#" class="text__link">VIEW CASE STUDY</a>
+                </div>
             </div>
             <div class="contact">
                 <div class="contact__text">
@@ -90,18 +102,19 @@
                         Check our site www.symu.co for more goods
                     </h3>
                 </div>
-            </div>    
-        </main>
-        <footer class="footer">
-                    <nav class="footer__menu">
-                        <ul class="menu__links">
-                            <li class="link"><a href="#">work</a></li>
-                            <li class="link"><a href="#">about me</a></li>
-                            <li class="link"><a href="#">news</a></li>
-                            <li class="link"><a href="#">contact</a></li>
-                        </ul>
-                    </nav>            
-        </footer>
-</div>       
+            </div>
+            </main>
+            <footer class="footer">
+                <nav class="footer__menu">
+                    <ul class="menu__links">
+                        <li class="link"><a href="#">work</a></li>
+                        <li class="link"><a href="#">about me</a></li>
+                        <li class="link"><a href="#">news</a></li>
+                        <li class="link"><a href="#">contact</a></li>
+                    </ul>
+                </nav>
+            </footer>
+        </div>
 </body>
+
 </html>
