aded more adaptation

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
         </header>
-        <div class="main">
+        <main class="main">
             <div class="about">
                 <div class="about__text">
                     <div class="text__wrapper">
@@ -116,5 +116,4 @@
             </footer>
         </div>
 </body>
-
 </html>
